--- a/AC Career Mode/controls/HistoryTab.xaml
+++ b/AC Career Mode/controls/HistoryTab.xaml
@@ -8,14 +8,8 @@
              x:Name="RecordsUC"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <ListView x:Name="RecordsCtrl_lv" SelectionMode="Single" Grid.Row="1" >
+        <ListView ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Records}" 
+                  SelectionMode="Single" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="100" DisplayMemberBinding="{Binding Date, StringFormat=dd-MM-yyyy}">
@@ -28,6 +22,5 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Label Content="{Binding Title}" HorizontalAlignment="Left" Width="403" />
     </Grid>
 </UserControl>
