--- a/AC Career Mode/controls/CarsControl.xaml
+++ b/AC Career Mode/controls/CarsControl.xaml
@@ -15,8 +15,8 @@
             <ColumnDefinition Width="263*"/>
             <ColumnDefinition Width="137*"/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="lv_CarMarket" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}" SelectionChanged="MarketLv_SelChanged" Grid.RowSpan="2" 
-                   ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=CarList}"  >
+        <ListView x:Name="lv_CarMarket" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  SelectionChanged="MarketLv_SelChanged" Grid.RowSpan="2" 
+                   ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=CarList}" MouseDoubleClick="lv_CarMarket_DoubleClick"  >
             <ListView.View>
                 <GridView>
 
