--- a/AC Career Mode/controls/TracksControl.xaml
+++ b/AC Career Mode/controls/TracksControl.xaml
@@ -8,14 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="83*"/>
-            <RowDefinition Height="7*"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="200"/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="lv_Tracks" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}" Grid.RowSpan="2" 
+        <ListView x:Name="lv_Tracks" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}" 
                   ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=TrackList}" SelectionChanged="lv_Tracks_SelectionChanged">
             <ListView.View>
                 <GridView>
@@ -36,8 +35,9 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="b_BuySell" IsEnabled="False" Click="b_BuySell_Click" Margin="10,0,10,0" Height="30" VerticalAlignment="Bottom" Grid.RowSpan="2" Grid.Column="1"/>
         <Image x:Name="img_TrackPreview" Grid.Column="1" Height="160" Margin="10,0,10,0" VerticalAlignment="Top"/>
         <Image x:Name="img_TrackOutline" Grid.Column="1" Height="160" Margin="10,0,10,0" VerticalAlignment="Top"/>
+        <Button x:Name="b_Upgrade" Content="Upgrade" IsEnabled="False" Click="b_Upgrade_Click" Margin="5,0,0,35" Grid.Column="1" Height="30" VerticalAlignment="Bottom"/>
+        <Button x:Name="b_BuySell" IsEnabled="False" Click="b_BuySell_Click" Margin="5,0,0,0" Grid.Column="1" Height="30" VerticalAlignment="Bottom"/>
     </Grid>
 </UserControl>
