--- a/Utilities/Views/Window1.xaml
+++ b/Utilities/Views/Window1.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Utilities.Views"
-        mc:Ignorable="d"
+        mc:Ignorable="d" ResizeMode="NoResize" Topmost="True"
         Title="Message" Height="180" Width="300" MinHeight="180" MinWidth="300">
     <Grid>
         <Grid.RowDefinitions>
