--- a/AC Career Mode/controls/RaceItem.xaml
+++ b/AC Career Mode/controls/RaceItem.xaml
@@ -5,23 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AC_Career_Mode.controls"
              mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="800" Width="Auto">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}" Margin="0,0,0,-20" >
+             d:DesignWidth="800" Height="70">
+    <Grid HorizontalAlignment="Stretch"  DataContext="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}" >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="278*"/>
-            <ColumnDefinition Width="233*"/>
-            <ColumnDefinition Width="289*"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="120"/>
         </Grid.ColumnDefinitions>
-        <Rectangle Stroke="Black" Fill="White" Grid.ColumnSpan="3"/>
-        <Label x:Name="lb_Car" d:Content="BMW E30 Touring Winter GT3" VerticalContentAlignment="Top" />
-        <Label x:Name="lb_Track" d:Content="Autodromo Victor Borrat Fabini" VerticalContentAlignment="Bottom" />
+        <Rectangle Stroke="Black" Fill="White" Grid.ColumnSpan="2"/>
+        <Label x:Name="lb_Car" d:Content="BMW E30 Touring Winter GT3" VerticalContentAlignment="Top" Margin="0,0,145,0" />
+        <Label x:Name="lb_Track" d:Content="Autodromo Victor Borrat Fabini" VerticalContentAlignment="Bottom" Margin="0,0,145,0" />
 
-        <Label x:Name="lb_Laps" d:Content="$50.000" VerticalContentAlignment="Top" HorizontalContentAlignment="Right" Grid.Column="1" />
-        <Label x:Name="lb_Prize" d:Content="25 laps" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Right" Grid.Column="1" />
-        <ComboBox x:Name="cb_Driver" Margin="86,3,0,3" HorizontalAlignment="Left" Width="200"
+        <Label x:Name="lb_Laps" d:Content="$50.000" VerticalContentAlignment="Top" HorizontalContentAlignment="Right" HorizontalAlignment="Right" />
+        <Label x:Name="lb_Prize" d:Content="25 laps" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Right" HorizontalAlignment="Right" />
+        <ComboBox x:Name="cb_Driver" Margin="3,3,3,0"
                   ItemsSource="{Binding Drivers}"
-                  DisplayMemberPath="Name" Grid.Column="2" />
-        <Button Content="Race" Margin="21,3,0,3" HorizontalAlignment="Left" Width="60" Grid.Column="2"/>
+                  DisplayMemberPath="Name" Grid.Column="1" Height="30" VerticalAlignment="Top" />
+        <Button Content="Race" Margin="3,37,3,0" Grid.Column="1" Height="30" VerticalAlignment="Top"/>
 
 
     </Grid>
